2005-01-07 Ian Rutt
 * Made substantial changes to structure to enable to begin process of allowing the 
   Energy-balance mass-balance model to be used in Glimmer. Needs testing, though.

2004-11-10 Ian Rutt
 * Changed scale_factor_at_projection_origin to scale_factor_at_proj_origin, to comply
   with f95 standard - identifiers must be 31 characters or less.

2004-11-08 Ian Rutt
 * Added loading of standard deviation field into glimmer (not used yet).
 * Added subroutine to define CF projection by hand, if necessary
 * Update input2ncdf.f90 to allow projection definition.

2004-11-04 Ian Rutt
 * Added area considerations of mean_to_local subroutine in glimmer_interp.f90 (not used
   in glimmer itself).

2004-10-21 Ian Rutt
 * Sorted out water budgeting. This is something of a fudge, for although
   melt and run-off maps are determined reasonably well, an overall constant
   is added to ablation to account for any non-conservation of mass in the dynamics.
 * Also adjusted ablation calculations so as not to remove more mass than is present.

2004-10-14 Ian Rutt
 * Fixed problem with coverage map normalisation

2004-10-13 Ian Rutt
 * Reorganised upscaling and field splicing to enable easy output of 
   initial fields to global model at initialisation time.

2004-09-20 Ian Rutt
 * Updated f90_dependencies.py to Magi's latest version - handles more
 than one module per file.

2004-09-16 Ian Rutt
 * Added Tony's physics documentation to main docs.
 * Patched netcdf I/O as per Magi's email
 * Added if block round velocity calculation so they're not
   done if whichevol=2 (when they are redundant).
	
2004-09-14 Ian Rutt
 * Finished updating user documentation.

2004-09-10 Ian Rutt
 * Continued to update documentation.

2004-08-26 Ian Rutt
 * More documentation updating - also changed font size

2004-08-25 Ian Rutt
 * Fixed problem with reading arrays from config files in
   glimmer_setup.f90
 * Replaced top-level glimmer namelist with new-style configuration file.